--- a/source/documentation/standards/hosting.html.md.erb
+++ b/source/documentation/standards/hosting.html.md.erb
@@ -1,79 +1,82 @@
 ---
 title: How to host services
-last_reviewed_on: 2021-05-13
+last_reviewed_on: 2021-11-22
 review_in: 3 months
 ---
 
 # <%= current_page.data.title %>
 
-At MOJ you must use the [Cloud
-Platform](https://user-guide.cloud-platform.service.justice.gov.uk/)
-to host your service by default, unless you're advised otherwise by a
-member of the [hosting
-team](https://peoplefinder.service.gov.uk/teams/hosting). This includes
-applications that would otherwise sit in your own infrastructure if
+At MOJ you must use the [Cloud Platform]
+(https://user-guide.cloud-platform.service.justice.gov.uk/) to host your
+service by default, unless you're advised otherwise by a member of the
+[hosting team](https://peoplefinder.service.gov.uk/teams/hosting). This
+includes applications that would otherwise sit in your own infrastructure if
 you have it.
 
 If your team needs to host legacy services, you should plan to use the
-[Modernisation
-Platform](https://ministryofjustice.github.io/modernisation-platform).
+[Modernisation Platform]
+(https://user-guide.modernisation-platform.service.justice.gov.uk/#modernisation-platform).
 
 ## Cloud Platform
 
 The Cloud Platform is a modern hosting platform for digital services:
 
 - It makes it quick and easy to 'just deploy an app'
-- Teams get the features they need to operate their service, such as
-  easy scalability, zero downtime deploys, security scanning, monitoring,
-  logging, and more, all set up for you by default
+- Teams get the features they need to operate their service, such as easy
+  scalability, zero downtime deploys, security scanning, monitoring, logging,
+  and more, all set up for you by default
 - When you need the full power of AWS or Kubernetes, it's all available
-- Configuration is all self-service, using Infrastructure as Code with
-  managed CI/CD and GitOps processes
-- The Cloud Platform team manage the hosting and provide support for
-  the platform
-- You can host [GOV.UK Prototype Kit sites](https://user-guide.cloud-platform.service.justice.gov.uk/documentation/getting-started/prototype-kit.html#create-a-gov-uk-prototype-kit-site)
+- Configuration is all self-service, using Infrastructure as Code with managed
+  CI/CD and GitOps processes
+- The Cloud Platform team manage the hosting and provide support for the
+  platform
+- You can host [GOV.UK Prototype Kit sites]
+  (https://user-guide.cloud-platform.service.justice.gov.uk/documentation/getting-started/prototype-kit.html#create-a-gov-uk-prototype-kit-site)
   quickly and easily
 
-Your team can get started on the Cloud Platform without letting anyone
-know; just follow the [Cloud Platform
-documentation](https://user-guide.cloud-platform.service.justice.gov.uk/#cloud-platform-user-guide)
+Your team can get started on the Cloud Platform without letting anyone know;
+just follow the [Cloud Platform documentation]
+(https://user-guide.cloud-platform.service.justice.gov.uk/#cloud-platform-user-guide)
 and get in touch with the Cloud Platform team if you need help.
 
 ## Modernisation Platform
 
-The Modernisation Platform is a cloud-first hosting platform for
-legacy applications. It's currently in development, and you can become
-an early adopter by following the [Modernisation Platform user
-guide](https://ministryofjustice.github.io/modernisation-platform).
+The Modernisation Platform is a cloud-first hosting platform for legacy
+applications. It's currently in development, and you can become an early
+adopter by following the [Modernisation Platform user guide]
+(https://user-guide.modernisation-platform.service.justice.gov.uk/#modernisation-platform).
 
 - It will make it easy to create non-Kubernetes environments for applications
-- It will align with the MOJ [Security Guidance](https://ministryofjustice.github.io/security-guidance/baseline-aws-accounts/#baseline-for-amazon-web-services-accounts)
-- It will standardise commonalities across applications, such as: application networking, certificate management, CI/CD processes; with infrastructure as code
+- It will align with the MOJ [Security Guidance]
+  (https://security-guidance.service.justice.gov.uk/baseline-aws-accounts/#baseline-for-amazon-web-services-accounts)
+- It will standardise commonalities across applications, such as: application
+  networking, certificate management, CI/CD processes; with infrastructure as
+  code
 - It will support you modernising your applications
 
 ## Other hosting infrastructure
 
-If you think your service might require other hosting, [get in touch
-with the hosting team](mailto:hosting-leads@digital.justice.gov.uk)
-and we'll help identify which of our other hosting options is best for
-your service, or set up extra accounts if we've already identified the
-right setup for you. This includes:
+If you think your service might require other hosting, whether in AWS, Azure, or
+anything else, [get in touch with the hosting team]
+(mailto:hosting-leads@digital.justice.gov.uk) and we'll help identify which of
+our other hosting options is best for your service, or set up extra accounts if
+we've already identified the right setup for you. This includes:
 
 - LAA AWS and 6Degrees infrastructure
 - HMPPS Azure infrastructure
-- Self-managed AWS infrastructure
+- Self-managed infrastructure, in AWS or Azure
 - Retirement infrastructure
 
-If you self-manage your own AWS infrastructure, you should consider
-moving it to the [Cloud Platform](#cloud-platform) or the
-[Modernisation Platform](#modernisation-platform).
+If you self-manage your own infrastructure, you should consider moving it to
+the [Cloud Platform](#cloud-platform) or the[Modernisation Platform]
+(#modernisation-platform).
 
 ## We use public cloud hosting by default
 
-We follow the [Government Cloud First
-policy](https://www.gov.uk/guidance/government-cloud-first-policy) and
-use public cloud "Platform as a Service" (PaaS) and "Infrastructure as
-a Service" (IaaS) infrastructure to host our services.
+We follow the [Government Cloud First policy]
+(https://www.gov.uk/guidance/government-cloud-first-policy) and use public
+cloud "Platform as a Service" (PaaS) and "Infrastructure as a Service"
+(IaaS) infrastructure to host our services.
 
 Our choice of platforms:
 
@@ -83,30 +86,29 @@ Our choice of platforms:
 - help reduce cost across MOJ
 - support building capability across the department rather than in silos
 
-We currently use [Amazon Web Services (AWS)](https://aws.amazon.com/)
-by default for scalable computing, storage and deployment services,
-but we may recommend some services are hosted in [Microsoft
-Azure](https://azure.microsoft.com/), based on the needs of the
-service and its relationship to other services already in Azure.
+We currently use [Amazon Web Services (AWS)](https://aws.amazon.com/) by default
+for scalable computing, storage and deployment services, but we may recommend
+some services are hosted in [Microsoft Azure]
+(https://azure.microsoft.com/), based on the needs of the service and its
+relationship to other services already in Azure.
 
-If your service is currently hosted outside of AWS or Azure, get in
-touch with the Application Modernisation team (TODO - add a link here) to plan for its
-future hosting.
+If your service is currently hosted outside of AWS or Azure, get in touch with
+the [Modernisation Platform team]
+(https://peoplefinder.service.gov.uk/teams/modernisation-platform) to plan for
+its future hosting.
 
 ## We pay for hosting centrally by default
 
 By default, we pay for all use of AWS and Azure services across MOJ
 (excluding HMCTS) centrally.
 
-As part of this, the hosting team will routinely review your use of
-hosting to ensure you're using infrastructure appropriately, keeping
-it secure and up to date, and making the best use of the money you're
-spending.
+As part of this, the hosting team will routinely review your use of hosting to
+ensure you're using infrastructure appropriately, keeping it secure and up to
+date, and making the best use of the money you're spending.
 
-If your service or services cost more than £30,000 per year to host,
-we may need to cross-charge you for your use. Cross-charging typically
-only applies to very large services or teams, and we currently only
-cross-charge two groups.
+If your service or services cost more than £30,000 per year to host, we may need
+to cross-charge you for your use. Cross-charging typically only applies to very
+large services or teams, and we currently only cross-charge two groups.
 
-If we do need to cross-charge you, we will still work with you to
-ensure you're using infrastructure appropriately and safely.
+If we do need to cross-charge you, we will still work with you to ensure you're
+using infrastructure appropriately and safely.
